vnext
Added tenant parameter to Export-NavContainerDatabasesAsBacpac
Object handling functions will not ask for credentials if not specified
BugFix: doNotOpen in Get-NavContainerEventLog was string - should be switch
Compile-AppInNavContainer had a dependency on the WebClient, this dependency is removed

0.2.8.4
Bugfix: Invoke-NavContainerCodeunit didn't work with multitenancy
Bugfix: Premium user didn't work with multitenancy
Bugfix: Hardcoded containername in Setup-NavContainerTestUsers

0.2.8.0
BugFix: Create-AadAppsForNav throws an error when the owner of the Excel App Registration already exists
Add function Get-NavContainerNavUser to return users from the container
Add function Invoke-NavContainerCodeunit to invoke a codeunit in a container
Add function Compile-AppInNavContainer to compile an extension v2 app in a container (preview)
Added publisher and version to unpublish-navcontainerapp
Add function Setup-NavContainerTestUsers to setup test users with different plans and permissions
Add parameter -AssignPremiumPlan to new-navcontainer in order to assign premium plan to the default super user

0.2.7.5
BugFix: New-NavContainerTenant and Remove-NavContainerTenant falsely asks for SQL credentials if not specified

0.2.7.4
BugFix: -includeCSide and -shortcuts None caused an error that $customconfig didn't exist
Added -fullObjectsFolder to export-ModifiedObjectsAsDeltas to receive full objects
Added TLS1.2 support to Download-File
New-NavContainer now supports specifying a .zip file (UNC or URL) as NavDvdPath
Add function Get-NavContainerTenants to list all tenants from a multitenant container

0.2.7.3
BugFix: ExportTxtSkipUnlicensed doesn't get set in Export-NavContainerObject when using NavUserPassword authentication
Added -compile switch to Import-DeltasToNavContainer
Added -deltaFolder to Export-ModifiedObjectsAsDeltas
Increased timeout in Wait-NavContainerReady

0.2.7.1